...
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fadanmu"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/sousuo"/>

        <EditText
            android:id="@+id/sousuo"
            android:layout_width="275dp"
            android:layout_height="40dp"
            android:hint="搜歌曲、歌星"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:background="@null"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@id/sousuo_btn"
            app:layout_constraintTop_toTopOf="@id/sousuo_linear"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/sousuo_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@mipmap/sousuoicon"
            android:text="搜索"
            android:textSize="0sp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="@id/sousuo_linear"
            app:layout_constraintTop_toTopOf="@id/sousuo_linear"
            app:layout_constraintBottom_toBottomOf="@id/sousuo_linear" />
...
        android:textSize="0sp"
        app:layout_constraintStart_toEndOf="@+id/fadanmu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/sousuo_linear"
        app:layout_constraintTop_toBottomOf="@id/sousuo_linear"
...
            android:gravity="center_horizontal"
            android:textColor="@color/radiogroupmusiccolor"
            android:background="@drawable/radiobuttonshape"
            android:layout_marginEnd="65dp"
            />
        <RadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:drawableTop="@drawable/singer_selector"
            android:text="歌星列表"
            android:textColor="@color/radiogroupsingercolor"
            android:button="@null"
            android:background="@drawable/radiobuttonshape"
            android:layout_margin="10dp"
            />
    </RadioGroup>
...
        android:layout_height="380dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/radiogroup"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <GridView
            android:id="@+id/gequ_mingdan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
            android:scrollbars="none"
            />
        <ListView
            android:id="@+id/gexing_mingdan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            />

    </LinearLayout>
...
