...
    <item
        android:title="遥控"
        android:id="@+id/control_item"
        android:icon="@drawable/controlicon_selector"
        />
    <item
        android:title="点歌"
        android:id="@+id/music_item"
        android:icon="@drawable/musicicon_selector"
        />
</menu>
