...
        android:background="@drawable/fanhui"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ListView
        android:id="@+id/diange_listview"
        android:layout_width="match_parent"
        android:layout_height="685dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diange_exit" />
</androidx.constraintlayout.widget.ConstraintLayout>
