<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GexingXinxiActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/gequ_xinxi_imagview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ListView
        android:id="@+id/gequ_xinxi_listview"
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        app:layout_constraintTop_toBottomOf="@id/gequ_xinxi_imagview"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>