...
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ListView
        android:id="@+id/liuxing_listview"
        android:layout_width="wrap_content"
        android:layout_height="530dp"
        app:layout_constraintTop_toBottomOf="@id/liuxing_backgruond"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
