...
        android:textColor="#919191"
        app:layout_constraintTop_toBottomOf="@id/gequ_liuxing_listview_geming"
        app:layout_constraintStart_toStartOf="@id/gequ_liuxing_listview_geming"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/gequ_liuxing_listview_diange"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:text="点歌"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/gequ_liuxing_listview_geming"
...
